[gd_scene load_steps=6 format=2]

[ext_resource path="res://CardSystem/Scripts/Card.cs" type="Script" id=1]
[ext_resource path="res://CardSystem/Assets/Cards/2_Lalito.png" type="Texture" id=2]
[ext_resource path="res://Cards_UI/Demos/Outline/Outline2D/OutlineTextureRect.gd" type="Script" id=3]
[ext_resource path="res://Cards_UI/Shaders/outline2D_outer.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 7.833

[node name="Card" type="Control"]
anchor_right = 0.127
anchor_bottom = 0.149
margin_right = -243.84
margin_bottom = -160.92
rect_pivot_offset = Vector2( 123, 161 )
input_pass_on_modal_close_click = false
script = ExtResource( 1 )

[node name="CardImage" type="TextureRect" parent="."]
material = SubResource( 10 )
margin_right = 244.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( 122, 161 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )
isInGameplay = true

[node name="Tween" type="Tween" parent="CardImage"]

[connection signal="mouse_entered" from="." to="CardImage" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="CardImage" method="_on_Area2D_mouse_exited"]
